--- a/web/Application/Home/View/Protect/login.html
+++ b/web/Application/Home/View/Protect/login.html
@@ -76,7 +76,7 @@ $(document)
     			} else {
     				self.find(".Validform_checktip").text(data.info).show();
     				$(".reloadverify").click();
-    				$("#captcha").val();
+    				$("#captcha").val('');
     			}
     		}
     	});
