head logo --> base64 decode

--- a/web/Application/Install/View/Base/head.html
+++ b/web/Application/Install/View/Base/head.html
@@ -4,9 +4,8 @@
     	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
     		<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
     	</a>
-    	<a class="brand" href="__APP__" style="padding:1px 0 0 12px;">
-    		<img src="__PUBLIC__/img/logo.png" height="40" />
-    		CPBQueue
+    	<a class="brand" href="__APP__">
+    		<span class='brand-slogan'>CPBQueue</span>
     	</a>
 	</div>
   </div>
