--- a/web/Application/Home/View/Base/head.html
+++ b/web/Application/Home/View/Base/head.html
@@ -4,9 +4,8 @@
     	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
     		<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
     	</a>
-    	<a class="brand" href="__APP__" style="padding:1px 0 0 12px;">
-    		<img src="__PUBLIC__/img/logoc.png" height="40" width="65.5"/>
-    		CPBQueue
+    	<a class="brand" href="__APP__">
+    		<span class='brand-slogan'>CPBQueue</span>
     	</a>
     	<div class="btn-group pull-right" style="margin-top:5px;">
     		<?php if(CONTROLLER_NAME!='Protect'){echo '<a class="btn" href="__MODULE__/Index/logout"><i class="icon-user"></i> Log out</a>';}?></if>
