--- a/web/Application/Install/View/Index/step2.html
+++ b/web/Application/Install/View/Index/step2.html
@@ -56,20 +56,24 @@
           </div>
           <h2>Runtime Configuration</h2>
           <div>
-              <input type="number" name="cpu" id="cpu" value="127.0.0.1" required>
-              <span>The number of processors that your computing node has. e.g.: 16</span> </div>
-            <div>
-              <input type="number" name="mem" id="mem" required>
-              <span>Memory of your computing node (Gb). e.g.: 64</span> </div>
+            <input type="number" name="cpu" id="cpu" value="127.0.0.1" required>
+            <span>The number of processors that your computing node has. e.g.: 16</span> </div>
+          <div>
+            <input type="number" name="mem" id="mem" required>
+            <span>Memory of your computing node (Gb). e.g.: 64</span> </div>
+          <div>
+            <input type="number" name="udiskq" id="udiskq" required>
+            <span>User Disk Quota (Gb). e.g.: 100</span> </div>
           <h2>Adiministrator Configuration</h2>
           <div>
-              <input type="email" name="user" id="user" required>
-              <span>Email address of the administrator. e.g.: webmaster@institute.org</span> </div>
-            <div>
-              <input type="password" name="passwd" id="passwd" required>
-              <span>Password</span> </div>
+            <input type="email" name="user" id="user" required>
+            <span>Email address of the administrator. e.g.: webmaster@institute.org</span> </div>
+          <div>
+            <input type="password" name="passwd" id="passwd" required>
+            <span>Password</span> </div>
         </form>
-        <button id="submit" type="button" class="btn btn-primary btn-large" onclick="$('form').submit();return false;">Next</button></div>
+        <button id="submit" type="button" class="btn btn-primary btn-large" onclick="$('form').submit();return false;">Next</button>
+      </div>
       <!-- </div> --> 
     </div>
     <div class="span2"></div>
