--- a/web/Application/Home/View/Index/index.html
+++ b/web/Application/Home/View/Index/index.html
@@ -56,7 +56,7 @@
 		    <a data-original-title="" href="#" onclick="showFolder();">
 		        <i class="icon-folder-open"></i>
 		        <div class="info"></div>
-		        <div class="status">Workspace</div>
+		        <div class="status">Sample Pool</div>
 		    </a>
 		</div>
 		<div class="metro-nav-block nav-block-red">
@@ -135,7 +135,7 @@
 	  <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Result</h4>
+          <h4 class="modal-title" id="myModalLabel">Upload Files</h4>
         </div>
         <div class="modal-body"> </div>
       </div>
