--- a/ui/templates/ui/add_job.html
+++ b/ui/templates/ui/add_job.html
@@ -84,18 +84,13 @@
 					message: data.info,
 					showCloseButton: true
 				});
-				$("#inputFile").val('');
-				$("#inputFile-lf").removeAttr("checked");
-				$("#parameter").val('');
-				$("#run_dir").val('');
-				$("#verify").val('');
+				self[0].reset();
 			} else {
 				Messenger().post({
 					message: data.info,
 					type: 'error',
 					showCloseButton: true
 				});
-				$("#verify").val('');
 			}
 		}
     });
