Add support for batch jobs and fix small bugs
1. Add support for batch jobs
2. Load resource data when install
3. Home link in admin site
4. Upload file form
5. error page
6. add protocol owner check when add single job

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -27,7 +27,7 @@
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
         </a>
-        <a class="brand" href="__APP__">
+        <a class="brand" href="{% url 'ui:index' %}">
             <span class='brand-slogan'>{% block branding %}{% endblock %}</span>
         </a>
         <ul class="nav pull-right">
