--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <title>Dashboard | CPBQueue</title>
 <link href="{% static "ui/css/bootstrap.css" %}" rel="stylesheet" media="screen">
+<link href="{% static "ui/css/bootstrap-theme.min.css" %}" rel="stylesheet" media="screen">
 <link href="{% static "ui/css/site.css" %}" rel="stylesheet" media="screen">
 <link href="{% static "ui/css/font-awesome.min.css" %}" rel="stylesheet">
 </head>
