--- a/accounts/templates/accounts/single.html
+++ b/accounts/templates/accounts/single.html
@@ -14,7 +14,7 @@
     <![endif]-->
 </head>
 <body>
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
   <div class="navbar-inner">
     <div class="container-fluid">
     	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
