--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -10,7 +10,7 @@
 <link href="{% static "ui/css/font-awesome.min.css" %}" rel="stylesheet">
 </head>
 <body>
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
   <div class="navbar-inner">
     <div class="container-fluid">
     	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
