--- a/ui/templates/ui/single.html
+++ b/ui/templates/ui/single.html
@@ -15,7 +15,7 @@
     <![endif]-->
 </head>
 <body style="background-color: #efefef;">
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
   <div class="navbar-inner">
     <div class="container-fluid">
     	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
