add step while creating the protocol

--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -63,6 +63,7 @@
 <script src="{% static "ui/js/bootstrap.min.js" %}"></script>
 <script src="{% static "ui/js/messenger.min.js" %}"></script>
 <script src="{% static "ui/js/jquery.cookie.js" %}"></script>
+<script src="{% static "ui/js/auto.micro.js" %}"></script>
 <script>
 $(document).ajaxStart(function(){
     $("button:submit").attr("disabled", true);
