--- a/ui/templates/ui/show_steps.html
+++ b/ui/templates/ui/show_steps.html
@@ -20,7 +20,7 @@
                 <span class="label label-success disk" data-hash="{{ step.hash }}" onclick="showML(this);" style="cursor:pointer;">Disk</span>
             </td>
             <td>
-                <span class="user-actions"><a href="#" class="label label-success dels" data-sid="{{ step.id }}">Delete</a></span>
+                <span class="user-actions"><a href="#" class="label label-danger dels" data-sid="{{ step.id }}">Delete</a></span>
             </td>
         </tr>
 	{% endfor %}
