--- a/ui/templates/ui/add_protocol.html
+++ b/ui/templates/ui/add_protocol.html
@@ -10,17 +10,35 @@
             <label class="control-label" for="name">Name</label>
             <input type="text" class="form-control input-xlarge" id="name" name="name" required />
         </div>
+        <h3>Steps</h3>
+        <div class="step-container">
+            <div class="protocol-step">
+                <div class="form-group">
+                    <label class="control-label" for="name">Software</label>
+                    <input type="text" class="form-control input-xlarge" id="software" name="software" required />
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="name">Parameter</label>
+                    <input type="text" class="form-control input-xlarge" id="parameter" name="parameter" required />
+                </div>
+                <hr>
+            </div>
+        </div>
+        <a class="btn btn-default" onclick="addStep();"><i class="glyphicon glyphicon-plus"></i>Add step</a>
         {% csrf_token %}
         <p></p>
         <div class="controls Validform_checktip text-warning"></div>
         <div class="form-actions">
-            <button type="submit" class="btn btn-success btn-large btn-block">Add</button>
+            <button type="submit" class="btn btn-success btn-large btn-block">Create Protocol</button>
         </div>
     </form>
 </div>
 {% endblock %}
 {% block script %}
     $("#add-protocol").addClass("active");
+    $(document).ready(function(){
+        var oTextbox = new AutoSuggestControl("parameter");
+    });
     $("form").submit(function(){
 		var self = $(this);
 		$.post(self.attr("action"), self.serialize(), success, "json");
@@ -43,4 +61,11 @@
 			}
 		}
     });
+    function addStep(){
+        new_step = $(".protocol-step:eq(0)").clone();
+        new_step.find(":input").each(function(i){
+            $(this).val("");
+        });
+        new_step.appendTo(".step-container");
+    }
 {% endblock %}
