--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -48,7 +48,34 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Add New Step</h4>
             </div>
-            <div class="modal-body"> </div>
+            <div class="modal-body">
+                <form class="form" method="post" id="new-step-form" action="{% url 'ui:add_step' %}">
+                    <div class="form-group">
+                        <label for="software">Software*:</label>
+                        <input type="text" class="form-control" id="software" name="software" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="parameter">Parameters*:</label>
+                        <input type="text" class="form-control" id="parameter" name="parameter" />
+                    </div>
+                    <hr />
+                    <input type="hidden" name="parent" id="step-parent">
+                    <div class="form-group" style="text-align: center;">
+                        <button type="submit" class="btn btn-success btn-large">Add</button>
+                    </div>
+                </form>
+                <div class="bs-callout bs-callout-info">
+                    You can use varibles or references when defining the parameters. Below are some of the system level variable:
+                    <ul>
+                        <li><code>InitInput</code>: The initial input files which maps to files you provide when you create a job.</li>
+                        <li><code>LastOutput</code>: Output files of last step.</li>
+                        <li><code>LastOutputN</code>: The n-th output file of last step (in alphabetical order).</li>
+                        <li><code>job</code>: job ID.</li>
+                        <li><code>ThreadN</code>: The number of CPUs in the running node.</li>
+                    </ul>
+                    All varibles should be surrounded by curly-braces, like {ThreadN}.
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -98,6 +125,9 @@
 {% block script %}
     $("#edit-job").addClass("active");
     var csrftoken = $.cookie('csrftoken');
+    $(document).ready(function(){
+        var oTextbox = new AutoSuggestControl("parameter");
+    });
     $.ajaxSetup({
         beforeSend: function(xhr, settings){
             xhr.setRequestHeader("X-CSRFToken", csrftoken);
@@ -115,6 +145,10 @@
 					showCloseButton: true
 				});
                 self[0].reset();
+                if (self.attr('id') == 'new-step-form'){
+                    showSteps($("#step-parent").val());
+                    $('#newStep').modal('hide');
+                }
 			} else {
 				Messenger().post({
 					message: data.info,
@@ -181,10 +215,13 @@
         }
     }
     function showNewStep(recId){
-        $.get("{% url 'ui:add_step' %}", {protocol: recId}, function(data){
-            $('#newStep .modal-body').html(data.info);
-            $('#newStep').modal();
-        });
+        $('#newStep #step-parent').val(recId);
+        $('#newStep .modal-body').html();
+        $('#newStep').modal();
+        //$.get("{% url 'ui:add_step' %}", {protocol: recId}, function(data){
+        //    $('#newStep .modal-body').html(data.info);
+        //    $('#newStep').modal();
+        //});
     }
     function showShare(proId){
         $('#share #pro').val(proId);
