rename to BioQueue

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,5 +1,5 @@
 {% extends "ui/single.html" %}
-{% block title %}Sign Up | CPBQueue{% endblock %}
+{% block title %}Sign Up | BioQueue{% endblock %}
 {% block content %}
     <div class="container-fluid" style="margin: 50px 0;">
         <div class="row-fluid text-center">
