--- a/accounts/templates/accounts/single.html
+++ b/accounts/templates/accounts/single.html
@@ -21,7 +21,7 @@
     		<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
     	</a>
     	<a class="brand" href="__APP__">
-    		<span class='brand-slogan'>CPBQueue</span>
+    		<span class='brand-slogan'>BioQueue</span>
     	</a>
     	<div class="btn-group pull-right" style="margin-top:3px;">
     		{% if user.is_authenticated %}
