--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,8 +1,8 @@
 {% extends "ui/single.html" %}
-{% block title %}Sign In | CPBQueue{% endblock %}
+{% block title %}Sign In | BioQueue{% endblock %}
 {% block content %}
 <div class="well">
-    <h1 class="margin-base-vertical text-center" style="text-align:center;">Sign in CPBQueue</h1>
+    <h1 class="margin-base-vertical text-center" style="text-align:center;">Sign in BioQueue</h1>
     <form action="." method="post" class="form-horizontal">
         <div class="control-group"></div>
         <div class="Validform_checktip alert" style="display: none;"></div>
