--- a/ui/templates/ui/add_job.html
+++ b/ui/templates/ui/add_job.html
@@ -1,5 +1,5 @@
 {% extends "ui/base.html" %}
-{% block title %}Add Job | CPBQueue{% endblock %}
+{% block title %}Add Job | BioQueue{% endblock %}
 {% block content %}
 <div class="page-header">
     <h1>New Job</h1>
