--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Dashboard | CPBQueue</title>
+<title>Dashboard | BioQueue</title>
 <link href="{% static "ui/css/bootstrap.css" %}" rel="stylesheet" media="screen">
 <link href="{% static "ui/css/bootstrap-theme.min.css" %}" rel="stylesheet" media="screen">
 <link href="{% static "ui/css/site.css" %}" rel="stylesheet" media="screen">
@@ -17,7 +17,7 @@
     		<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
     	</a>
     	<a class="brand" href="{% url 'ui:index' %}">
-    		<span class='brand-slogan'>CPBQueue</span>
+    		<span class='brand-slogan'>BioQueue</span>
     	</a>
     	<div class="nav navbar-nav navbar-right" style="margin-top:3px;">
     		{% if user.is_authenticated %}
