--- a/ui/templates/ui/manage_reference.html
+++ b/ui/templates/ui/manage_reference.html
@@ -1,5 +1,5 @@
 {% extends 'ui/base.html' %}
-{% block title %}Reference | CPBQueue{% endblock %}
+{% block title %}Reference | BioQueue{% endblock %}
 {% block content %}
 <div class="row-fluid">
     <div class="page-header">
