--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -1,5 +1,5 @@
 {% extends "ui/base.html" %}
-{% block title %}Job Status | CPBQueue{% endblock %}
+{% block title %}Job Status | BioQueue{% endblock %}
 {% block content %}
 <meta http-equiv="refresh" content="30">
     <div class="row-fluid">
