--- a/ui/templates/ui/settings.html
+++ b/ui/templates/ui/settings.html
@@ -1,5 +1,5 @@
 {% extends 'ui/base.html' %}
-{% block title %}System Settings | CPBQueue{% endblock %}
+{% block title %}System Settings | BioQueue{% endblock %}
 {% block content %}
 <div class="row-fluid">
     <div class="page-header">
