--- a/ui/templates/ui/show_learning.html
+++ b/ui/templates/ui/show_learning.html
@@ -1,5 +1,5 @@
 {% extends 'ui/base.html' %}
-{% block title %}Import Check Point | CPBQueue{% endblock %}
+{% block title %}Import Check Point | BioQueue{% endblock %}
 {% block content %}
 <div class="row-fluid">
     <div class="page-header">
