--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,9 +1,9 @@
 {% extends "admin/base.html" %}
 
-{% block title %}CPBQueue Administration{% endblock %}
+{% block title %}BioQueue Administration{% endblock %}
 
 {% block branding %}
-CPBQueue Administration
+BioQueue Administration
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
