--- a/templates/admin/single.html
+++ b/templates/admin/single.html
@@ -21,7 +21,7 @@
     		<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
     	</a>
     	<a class="brand" href="{% url 'ui:index' %}">
-    		<span class='brand-slogan'>CPBQueue</span>
+    		<span class='brand-slogan'>BioQueue</span>
     	</a>
     	<div class="nav navbar-nav navbar-right" style="margin-top:3px;">
     		{% if user.is_authenticated %}
