--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -1,5 +1,5 @@
 {% extends 'ui/base.html' %}
-{% block title %}Protocol | CPBQueue{% endblock %}
+{% block title %}Protocol | BioQueue{% endblock %}
 {% block content %}
 <div class="row-fluid">
     <div class="page-header">
@@ -112,7 +112,7 @@
             <button type="submit" class="btn btn-default btn-block">Share with a peer</button>
 		</form>
 		<legend>Share with public</legend>
-		<span class="help-block">By clicking button below, you will visit CPBQueue's Online Repository, which stores your protocol and shares them with the public.</span>
+		<span class="help-block">By clicking button below, you will visit BioQueue's Online Repository, which stores your protocol and shares them with the public.</span>
 		<a href="http://queue.yaoli.space/Open" class="btn btn-block btn-primary">Share with public</a>
       </div>
       <div class="modal-footer">
