--- a/ui/templates/ui/single.html
+++ b/ui/templates/ui/single.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Sign In | CPBQueue</title>
+<title>Sign In | BioQueue</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Li Yao">
 <link href="{% static "ui/css/bootstrap.css" %}" rel="stylesheet" media="screen">
@@ -22,7 +22,7 @@
     		<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
     	</a>
     	<a class="brand" href="{% url 'ui:index' %}">
-    		<span class='brand-slogan'>CPBQueue</span>
+    		<span class='brand-slogan'>BioQueue</span>
     	</a>
     	<div class="nav navbar-nav navbar-right" style="margin-top:3px;">
     		{% if user.is_authenticated %}
