--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -64,6 +64,7 @@
 <script src="{% static "ui/js/messenger.min.js" %}"></script>
 <script src="{% static "ui/js/jquery.cookie.js" %}"></script>
 <script src="{% static "ui/js/auto.micro.js" %}"></script>
+<script src="{% static "ui/js/bootstrap-slider.min.js" %}"></script>
 <script>
 $(document).ajaxStart(function(){
     $("button:submit").attr("disabled", true);
