--- a/ui/templates/ui/settings.html
+++ b/ui/templates/ui/settings.html
@@ -19,12 +19,21 @@
             <input type="number" class="form-control" id="mem" name="mem" value="{{ memory }}" required />
         </div>
         <div class="form-group">
-            <label class="control-label" for="dquota">User Disk Quota(Gb) <i id="tooltip" class="icon-info-sign" data-toggle="tooltip" title="Total Disk Space(Gb): {{ max_disk }}<br />Free Disk Space(Gb): {{ free_disk }}" data-html="true"></i></label>
-            <input type="number" class="form-control" id="dquota" name="dquota" value="{{ disk_quota }}" min="0" max="{{ max_disk }}" required />
+            <label class="control-label" for="dquota">User Disk Quota(Gb) <i id="tooltip" class="icon-info-sign tooltipopen" data-toggle="tooltip" title="Total Disk Space(Gb): {{ max_disk }}<br />Free Disk Space(Gb): {{ free_disk }}" data-html="true"></i></label>
+            <input id="dquota" name="dquota" class="sliderbar" data-slider-id='diskquota' type="text" data-slider-min="0" class="form-control" data-slider-max="{{ max_disk }}" data-slider-step="1" data-slider-value="{{ disk_quota }}"/>
+        </div>
+        <div class="form-group">
+            <label class="control-label" for="rconf">Regression confidence: <i id="tooltip" class="icon-info-sign tooltipopen" data-toggle="tooltip" title="Weight for regression result" data-html="true"></i></label>
+            <input id="dquota" name="rconf" class="sliderbar" data-slider-id='regconfi' type="text" data-slider-min="0.1" class="form-control" data-slider-max="2" data-slider-step="0.1" data-slider-value="{{ confidence_weight }}"/>
+        </div>
+        <div class="form-group">
+            <label class="control-label" for="dquota">Correlation coefficient threshold: <i id="tooltip" class="icon-info-sign tooltipopen" data-toggle="tooltip" title="If the absolute value of correlation coefficient is less than this threshold, BioQueue will possess mean and sd." data-html="true"></i></label>
+            <input id="ccthr" name="ccthr" class="sliderbar" data-slider-id='corcoethr' type="text" data-slider-min="0.1" class="form-control" data-slider-max="1" data-slider-step="0.1" data-slider-value="{{ threshold }}"/>
         </div>
         {% csrf_token %}
         <input type="submit" class="btn btn-success btn-large" value="Update" />
     </form>
+    <hr/>
     <div class="page-header">
         <h1>System Maintenance</h1>
     </div>
@@ -34,5 +43,10 @@
 </div>
 {% endblock %}
 {% block script %}
-$('#tooltip').tooltip();
+$('.tooltipopen').tooltip();
+$('.sliderbar').slider({
+    formatter: function(value) {
+        return 'Current value: ' + value;
+    }
+});
 {% endblock %}
