--- a/ui/templates/ui/add_job.html
+++ b/ui/templates/ui/add_job.html
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="parameter">Special parameter <span class="icon-question-sign" data-toggle="popover" title="Special reference" data-content="特殊参数是一种样本常量，一些实验特异的参数可以在此定义，然后在step里引用。书写格式：“key=value;”"></span></label>
+                            <label for="parameter">Job parameter <span class="icon-question-sign" data-toggle="popover" title="Special reference" data-content="You can assign values to tags by entering job parameter, like key1=value1;key2=value2;"></span></label>
                             <input type="text" class="form-control" id="parameter" name="parameter" />
                         </div>
                         <div class="form-group" style="margin-bottom: 9px;">
