--- a/ui/templates/ui/foot.html
+++ b/ui/templates/ui/foot.html
@@ -1,1 +1,1 @@
-<footer class="well"> &copy; Li Yao 2016 (Patent ID: 2016SR112918). </footer>
+<footer class="well" style="text-align:center;">Created By Li Yao.</footer>
