--- a/templates/admin/single.html
+++ b/templates/admin/single.html
@@ -40,7 +40,7 @@
     <div class="span2"></div>
   </div>
   <hr>
-<footer class="well"> &copy; Li Yao 2016 (Patent ID: 2016SR112918). </footer>
+<footer class="well" style="text-align:center;">Created By Li Yao.</footer>
 <script src="{% static "ui/js/jquery.js" %}"></script>
 <script src="{% static "ui/js/bootstrap.min.js" %}"></script>
 <script>
