--- a/ui/templates/ui/variant_hint.html
+++ b/ui/templates/ui/variant_hint.html
@@ -1,7 +1,8 @@
 <div class="bs-callout bs-callout-info">
     You can use varibles or references when defining the parameters. Below are some of the system level variable:
     <ul>
-        <li><code>InitInput</code>: The initial input files which maps to files you provide when you create a job.</li>
+        <li><code>InputFile</code>: The initial input files which maps to files you provide when you create a job.</li>
+        <li><code>InputFileN</code>: The n-th file in input files.</li>
         <li><code>LastOutput</code>: Output files of last step.</li>
         <li><code>LastOutputN</code>: The n-th output file of last step (in alphabetical order).</li>
         <li><code>OutputN-M</code>: The m-th output file of the n-th step (in alphabetical order).</li>
